--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.10",
     "next": "10.1.3",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.15.2",
